# express

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
execfn/: Cargo.toml
execfn/src/: lib.rs
execfn/src/timeseries/: ema.rs  ma.rs  mod.rs
express/: Cargo.toml
express-core/: Cargo.toml
express-core/lang/: Cargo.toml
express-core/lang/src/: ast.rs  parser.rs
express-core/src/: formula.rs  interp.rs  lib.rs
express-core/types/: Cargo.toml
express-core/types/src/: lib.rs
express-core/xmacro/: Cargo.toml
express-core/xmacro/src/: lib.rs  uselib.rs
express-core/xmacro/tests/: integration_test.rs
express-eval/: Cargo.toml
express-eval/src/: ctx.rs  formula.rs  interp.rs  ir.rs  lib.rs
express-std/: Cargo.toml
express-std/src/: lib.rs
express-std/src/func/: acc.rs  init.rs  mod.rs  reduce.rs
express-std/src/math/: common.rs  log.rs  mod.rs
express-std/src/timeseries/: ema.rs  jma.rs  jma_opt.rs  ma.rs  malin.rs  mod.rs  twa.rs
express-ts/: Cargo.toml
express-ts/reference/: requirements.txt
express-ts/reference/timeseries/: jurik_mov_avg.py
express-ts/src/timeseries/: malin.rs
express/exmac/: Cargo.toml
express/exmac/src/: lib.rs
express/exmac/tests/: integration_test.rs
express/src/: lex.rs  lib.rs  parser.rs
express/types/: Cargo.toml
express/types/src/: lib.rs
formulas/: Cargo.toml
formulas/reference/: test_ts.py
formulas/reference/timeseries/: custom_features.py  features.py  omen.py  trade_features.py  utils_window_functions.py
formulas/src/timeseries/: ema.rs  ma.rs  mod.rs  timestamp.rs  ts.rs  twa.rs
