[package]
name = "express"
version = "0.1.0"
edition = "2021"
description = "A simple DSL to compute formulas on the fly"
authors = ["iy <iamero7@gmail.com>"]


[lib]
crate-type = ["lib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
