[package]
name = "exmac"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version="^1.0", features=["full"]}
quote = "^1.0"
types = { path="../types" }
proc-macro2 = "1.0.37"
